<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUp_TextViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/signUp_TextViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_TextViewUser"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/signUp_TextViewRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_repeat_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_TextViewPassword"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/signUp_EditTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_text_user"
        android:ems="10"
        android:hint="@string/edit_text_user"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUp_TextViewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_TextViewUser" />

    <EditText
        android:id="@+id/signUp_EditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_password"
        android:autofillHints="@string/edit_text_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUp_TextViewRepeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_TextViewPassword"
        app:layout_constraintVertical_bias="0.485" />

    <EditText
        android:id="@+id/signUp_EditTextRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_view_repeat_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_TextViewRepeatPassword"
        app:layout_constraintVertical_bias="0.057"
        android:autofillHints="@string/text_view_repeat_password" />

    <Button
        android:id="@+id/signUp_ButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_EditTextRepeatPassword"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/signUp_ButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_EditTextRepeatPassword"
        app:layout_constraintVertical_bias="0.149" />
</androidx.constraintlayout.widget.ConstraintLayout>